--- a/site/index.html
+++ b/site/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>spin.js</title>
+  <title>spin.js update by jiangwei.n</title>
   <meta name="description" content="An animated CSS activity indicator with VML fallback.">
   <meta name="viewport" content="width=1024, maximum-scale=1">
   <meta property="og:image" content="http://spin.js.org/assets/preview.jpg?v=1" />
@@ -262,7 +262,7 @@ target.appendChild(spinner.el);
   <li>Calling <code>spin()</code> now invokes <code>stop()</code> first. See <a href="https://github.com/fgnass/spin.js/issues/28">issue #28</a>.</li>
   <li>Added a workaround for the IE negative margin bug. See <a href="https://github.com/fgnass/spin.js/issues/27">issue #27</a>.</li>
   <li>The <code>new</code> operator is now optional. See <a href="https://github.com/fgnass/spin.js/issues/14">issue #14</a>.</li>
-  <li>Improved accessibility by adding <code>role="progressbar"</code>.</a>
+  <li>Improved accessibility by adding <code>role="progressbar"</code>.</li>
 </ul>
 
 <h3 id="v1.1">Version 1.1 (6.9.2011)</h3>
